k8s/istio-traffic-rule/dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demoweb
spec:
  host: demoweb
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN 
      #simple: RANDOM
