k8s/istio-traffic-rule/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demoweb 
spec:
  hosts:
  - demoweb.arecord.us
  gateways:
  - demoweb-gateway
  http:
  - route:
    - destination:
        port:
          number: 80
        host: demoweb
